--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     margin: 0;
     box-sizing: border-box;
-    background-color: #444;
+    background-color: #24292e;
     display: flex;
     align-items: center;
     justify-content: flex-start;
