--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 .result-card {
     display: flex;
@@ -12,15 +13,27 @@
     width: 100%;
     margin: 0.25rem;
 }
-.result-card img {
+.image-container {
+    height: 100px;
+    width: 100px;
+}
+.avatar-image {
     height: 100px;
     width: 100px;
 }
 .result-card button {
     font-size: 0.75rem;
+    color: #f6f6f6;
+    background-color: hsl(14, 23%, 22%);
+    height: 2rem;
+    width: 10rem;
 }
 .result-card div {
     padding: 0.25rem;
+}
+.result-card a {
+    text-decoration-line: underline;
+    color: hsl(250, 47%, 30%);
 }
 .owner-github {
     margin-left: auto;
@@ -32,4 +45,48 @@
 }
 .owner-container {
     flex-grow: 1;
+}
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -22px;
+    margin-left: -22px;
+    font-size: 10px;
+    text-indent: -9999em;
+    border-top: 2px solid rgba(255, 255, 255, 0.2);
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    border-left: 2px solid #555;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+.loader,
+.loader:after {
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+}
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
