--- a/src/components/watchlist/watchlist.css
+++ b/src/components/watchlist/watchlist.css
@@ -4,6 +4,9 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    background: #a9a9a9;
+    height: 100vh;
+    width: 100%;
 }
 .repo-card {
     display: flex;
@@ -13,6 +16,7 @@
     margin: 10px;
     width: 100%;
     margin: 0.25rem;
+    background: wheat;
 }
 .image-container {
     height: 100px;
