--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@1&display=swap');
 .navbar {
     margin: 0;
     box-sizing: border-box;
@@ -24,7 +25,13 @@
     padding: 1rem;
     margin: 0, 3rem;
     font-size: 1.25rem;
+    font-family: 'Merriweather Sans', sans-serif;
 }
-.fa {
+.navbar a:hover {
+    color: rgb(172, 45, 172);
+}
+.navbar .fa {
     color: crimson;
+    margin-left: 5rem;
+    margin-right: 0.75rem;
 }
