--- a/src/components/dash/dash.css
+++ b/src/components/dash/dash.css
@@ -9,10 +9,11 @@
     margin-right: 1.5rem;
 }
 .username {
-    color: #f6f6f6;
+    color: rgb(172, 45, 172);
     font-family: 'Merriweather Sans', sans-serif;
     font-size: 1.3rem;
     margin: auto 0.2rem;
+    font-weight: 600;
 }
 .fa-icon {
     cursor: pointer;
