--- a/src/components/dash/dash.css
+++ b/src/components/dash/dash.css
@@ -23,3 +23,8 @@
     font-size: 1.5rem;
     margin: auto 0.2rem;
 }
+@media (max-width: 500px) {
+    .username {
+        font-size: 1rem;
+    }
+}
