--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -42,9 +42,10 @@
     border: 3px solid white;
     text-decoration: none;
     color: white;
-    font-size: 5rem;
+    font-size: 3rem;
     font-family: 'Permanent Marker', cursive;
     padding: 1rem;
+    min-width: 50vh;
 }
 .homepage-main a {
     display: flex;
@@ -56,4 +57,20 @@
 .homepage-link:hover {
     color: crimson;
     border: 3px solid orangered;
+}
+@media (max-width: 770px) {
+    .break-container {
+        display: none;
+    }
+    .homepage-main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .homepage-link {
+        margin: 0;
+        font-size: 2rem;
+        min-width: 50vh;
+    }
 }
